trying to fix no scroll on mobile 2.0

--- a/css/global.css
+++ b/css/global.css
@@ -11,6 +11,12 @@ body {
   overflow-x: hidden;
 }
 
+@media (max-width: 768px) {
+    body {
+      -webkit-overflow-scrolling: touch;
+      overscroll-behavior: auto;
+    }
+}
   
 
 /* -----------------------------------
